Expose chapter download details
