# API/Controllers/DTOs/Worker.cs
@@ -1,5 +1,6 @@
 using System.ComponentModel;
 using System.ComponentModel.DataAnnotations;
+using System.Text.Json.Serialization;
 using API.Workers;
 
 namespace API.Controllers.DTOs;
@@ -7,7 +8,17 @@ namespace API.Controllers.DTOs;
 /// <summary>
 /// <see cref="BaseWorker"/> DTO
 /// </summary>
-public record Worker(string Key, IEnumerable<string> Dependencies, IEnumerable<string> MissingDependencies, bool DependenciesFulfilled, WorkerExecutionState State) : Identifiable(Key)
+public record Worker(
+    string Key,
+    IEnumerable<string> Dependencies,
+    IEnumerable<string> MissingDependencies,
+    bool DependenciesFulfilled,
+    WorkerExecutionState State,
+    string? MangaId = null,
+    string? MangaTitle = null,
+    string? ChapterId = null,
+    string? ChapterNumber = null,
+    string? ChapterTitle = null) : Identifiable(Key)
 {
     /// <summary>
     /// Workers this worker depends on having ran.
@@ -36,4 +47,19 @@ public record Worker(string Key, IEnumerable<string> Dependencies, IEnumerable<s
     [Required]
     [Description("Execution state of the Worker.")]
     public WorkerExecutionState State { get; init; } = State;
+
+    [JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull)]
+    public string? MangaId { get; init; } = MangaId;
+
+    [JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull)]
+    public string? MangaTitle { get; init; } = MangaTitle;
+
+    [JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull)]
+    public string? ChapterId { get; init; } = ChapterId;
+
+    [JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull)]
+    public string? ChapterNumber { get; init; } = ChapterNumber;
+
+    [JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull)]
+    public string? ChapterTitle { get; init; } = ChapterTitle;
 }
